--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,18 @@ h1 {
     font-family: 'arial';
 }
 
+.cis-260 {
+    color: cadetblue;
+    font-family: cursive
+}
+
+.test {
+    background-color: aliceblue
+}
+
+.link {
+    background-color: burlywood
+}
 h2 { 
     font-family: sans-serif;
     font-weight: 600; }
